# notion-project

./: .env  .gitignore  README  main.py  pyproject.toml  requirements.txt
Client/: send_request.py
api/: db.sqlite3  manage.py  run.py
api/Auth/: urls.py
api/Pages/: HomePage.html
api/auth/: customPermission.py  views.py
api/base/: admin.py  models.py  views.py
api/base/migrations/: 0001_initial.py  0002_alter_task_id.py
api/modules/: notion.py  notionExtract.py  notion_client.py  pytest.ini  saveNotionData.py
api/modules/tests/: conftest.py  test_notionExtract.py  test_notion_client.py
api/src/: asgi.py  settings.py  urls.py
api/webHook/: apps.py  urls.py  utils.py  views.py
data/: notion_model_pages.json  notion_model_workspace.json
modules/: get_shared_pages.py  notion-client.py  notionRequest.py
